Созданы основные страницы. Переходы: UserPage, AdminLoginPage. Прописаны кнопки 'Назад'

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -23,7 +23,8 @@
             <Image Source="./Elements/Media/beauty_logo.png"/>
             <TextBlock
                 Text="БАРХАТНЫЕ БРОВКИ"
-                VerticalAlignment="Center"/>
+                VerticalAlignment="Center"
+                Style="{StaticResource TextBlock}"/>
         </StackPanel>
         
         
