Переход на страницу 'AdminPage' по паролю

--- a/PageMain/AdminLoginPage.xaml
+++ b/PageMain/AdminLoginPage.xaml
@@ -15,7 +15,8 @@
             Width="400">
             <GroupBox
                 Header="Введите пароль администратора"/>
-            <PasswordBox/>
+            <PasswordBox
+                Name="AdminPasswordBox"/>
             
             <StackPanel 
                 Orientation="Horizontal"
